--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="bg-orange-400">
             <div class="flex justify-between items-center mx-2">
                   <ul class="">
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3">Trang Chủ</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3">Tuyển Sinh</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3">Chương Trình Đào Tạo</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3">Góc Sinh Viên</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3">Tuyển</a></li>
+                    <li class="inline-block mx-3 "><a href="#" class="block text-white py-3 hover:text-black">Trang Chủ</a></li>
+                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:text-black">Tuyển Sinh</a></li>
+                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:text-black">Chương Trình Đào Tạo</a></li>
+                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:text-black">Góc Sinh Viên</a></li>
+                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:text-black">Tuyển</a></li>
                   </ul>
                   <form  class="">
                         <input type="text">
