--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
         </div>
     </header>
     <div class="">
-        <img src="./src/img/img.jpg" alt="">
+        <img src="https://i.imgur.com/FSz2VuZ.jpg" alt="">
     </div>
     <main class="my-2">
         <h2 class="my-3 text-xl font-bold">TIN TỨC HỌC TẬP</h2>
         <div class="grid gap-5 grid-cols-3">
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
@@ -54,17 +54,17 @@
         <h2 class="my-3 text-xl font-bold">HOẠT ĐỘNG SINH VIÊN</h2>
         <div class="grid gap-5 grid-cols-3">
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
             <div class="border border-orange-400 p-4">
-              <img src="./src/img/img1.jpg" alt="" class="w-max">
+              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
               <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
               <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
             </div>
