--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </header>
-    <div class="">
+    <div class="banner my-3">
         <img src="https://i.imgur.com/FSz2VuZ.jpg" alt="">
     </div>
     <main class="my-2">
