--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Tuyển Sinh</a></li>
                     <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Chương Trình Đào Tạo</a></li>
                     <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Góc Sinh Viên</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Tuyển</a></li>
+                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Tuyển dụng</a></li>
                   </ul>
                   <form  class="">
                         <input type="text">
