Chia Route và Components LAB1

--- a/index.html
+++ b/index.html
@@ -8,72 +8,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="max-w-5xl m-auto ">
-        <header>
-        <div class="bg-[#272f54] py-5">
-          <img src="https://i.imgur.com/BPvFtRD.jpg" alt="" class="m-auto">
-        </div>
-        <div class="bg-[#c87903]">
-            <div class="flex justify-between items-center mx-2">
-                  <ul class="">
-                    <li class="inline-block mx-3 "><a href="#" class="block text-white py-3 hover:underline">Trang Chủ</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Tuyển Sinh</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Chương Trình Đào Tạo</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Góc Sinh Viên</a></li>
-                    <li class="inline-block mx-3"><a href="#" class="block text-white py-3 hover:underline">Tuyển dụng</a></li>
-                  </ul>
-                  <form  class="">
-                        <input type="text">
-                        <a href="#" class="text-white bg-[#272f54] border border-white px-3">Tìm Kiếm</a>
-                  </form>
-            </div>
-        </div>
-    </header>
-    <div class="banner my-3">
-        <img src="https://i.imgur.com/FSz2VuZ.jpg" alt="">
-    </div>
-    <main class="my-2">
-        <h2 class="my-3 text-xl font-bold text-[#272f54]">TIN TỨC HỌC TẬP</h2>
-        <div class="grid gap-5 grid-cols-3">
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-        </div>
-        <h2 class="my-3 text-xl font-bold text-[#272f54]">HOẠT ĐỘNG SINH VIÊN</h2>
-        <div class="grid gap-5 grid-cols-3">
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-            <div class="border border-black p-4">
-              <img src="https://i.imgur.com/fesHLbp.jpg" alt="" class="w-max">
-              <span class="text-orange-400 font-bold my-2 block">Vinh danh 295 sinh viên FPT Polytechnic học kì Spring 2018</span>
-              <p class="">Tối ngày 16/06/2018, Cao đẳng FPT Polytechnic Hà Nội đã tổ chức Lễ tôn vinh “Ong vàng Poly”, tuyên dương 295 cá nhân và tập thể có thành tích xuất sắc trong học tập cũng như hoạt</p>
-            </div>
-        </div>
-    </main>
-    <footer class="bg-[#272f54] text-center ">
-      <span class="text-white block py-3 font-bold">Link</span>
-    </footer>
-    </div>
+	  <div id="app">
+		  	
+	  </div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
