--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-		/>
-		<link
-			href="https://afeld.github.io/emoji-css/emoji.css"
-			rel="stylesheet"
-		/>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"
-			integrity="sha256-xKeoJ50pzbUGkpQxDYHD7o7hxe0LaOGeguUidbq6vis="
-			crossorigin="anonymous"
-		></script>
-		<link rel="stylesheet" href="./style.css" />
-	</head>
-	<body>
-		<div class="max-w-5xl m-auto">
-			<div id="app"></div>
-		</div>
-		<script type="module" src="./src/main.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Vite App</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"
+		integrity="sha256-xKeoJ50pzbUGkpQxDYHD7o7hxe0LaOGeguUidbq6vis=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+	<div class="max-w-5xl m-auto">
+		<div id="app"></div>
+	</div>
+	<script type="module" src="./src/main.js"></script>
+</body>
+
 </html>
