update giao diện mới , chi tiết sản phẩm, sản phẩm cùng loại, page liên hệ, page giỏ hàng, page thanh toán

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vite App</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-	<div class="max-w-5xl m-auto">
+	<div class="max-w-7xl m-auto ">
 		<div id="app"></div>
 	</div>
 	<script type="module" src="./src/main.js"></script>
